--- a/HTML/club.html
+++ b/HTML/club.html
@@ -7,8 +7,8 @@
     <title>The Club</title>
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="icon" type="image/x-icon" href="../public/assets/icons/favicon.svg">
-
 </head>
+
 <body>
     <header>
         <div class="banner_verde">
@@ -20,8 +20,7 @@
                     id="boton_miembro">
                     ¡Hazte Miembro!
                 </a>
-                <a title="enlace a socios" href="socios.html" class="link_button desktop_show"
-                    id="boton_identificate">
+                <a title="enlace a socios" href="socios.html" class="link_button desktop_show" id="boton_identificate">
                     <img src="../public/assets/icons/Customer.svg" alt="icono de cliente">
                     Identifícate
                 </a>
