--- a/HTML/socios.html
+++ b/HTML/socios.html
@@ -7,7 +7,6 @@
     <title>Become a Member</title>
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="icon" type="image/x-icon" href="../public/assets/icons/favicon.svg">
-
 </head>
 
 <body>
@@ -21,8 +20,7 @@
                     id="boton_miembro">
                     ¡Hazte Miembro!
                 </a>
-                <a title="enlace a socios" href="socios.html" class="link_button desktop_show"
-                    id="boton_identificate">
+                <a title="enlace a socios" href="socios.html" class="link_button desktop_show" id="boton_identificate">
                     <img src="../public/assets/icons/Customer.svg" alt="icono de cliente">
                     Identifícate
                 </a>
@@ -200,8 +198,8 @@
                 <a title="enlace a Youtube (work in progress)" href="#"> <img src="../public/assets/icons/YouTube.png"
                         alt="logotipo de Youtube">
                 </a>
-                <a title="enlace a Instagram (work in progress)" href="#"> <img src="../public/assets/icons/Instagram.png"
-                        alt="logotipo de Instagram">
+                <a title="enlace a Instagram (work in progress)" href="#"> <img
+                        src="../public/assets/icons/Instagram.png" alt="logotipo de Instagram">
                 </a>
                 <a title="enlace a TwitterX (work in progress)" href="#"> <img src="../public/assets/icons/TwitterX.png"
                         alt="logotipo de TwitterX">
