--- a/HTML/tienda.html
+++ b/HTML/tienda.html
@@ -7,7 +7,6 @@
     <title>Store</title>
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="icon" type="image/x-icon" href="../public/assets/icons/favicon.svg">
-
 </head>
 
 <body>
@@ -21,8 +20,7 @@
                     id="boton_miembro">
                     ¡Hazte Miembro!
                 </a>
-                <a title="enlace a socios" href="socios.html" class="link_button desktop_show"
-                    id="boton_identificate">
+                <a title="enlace a socios" href="socios.html" class="link_button desktop_show" id="boton_identificate">
                     <img src="../public/assets/icons/Customer.svg" alt="icono de cliente">
                     Identifícate
                 </a>
@@ -86,7 +84,8 @@
                     <li><a title="enlace a categorias raquetas (work in progress)" href="#">RAQUETAS</a></li>
                     <li><a title="enlace a categoria bolsas (work in progress)" href="#">BOLSAS</a></li>
                     <li><a title="enlace a categoria calzados (work in progress)" href="#">CALZADO</a></li>
-                    <li><a title="enlace a categoria accesorios y complementos (work in progress)" href="#">ACCESORIOS Y COMPLEMENTOS</a></li>
+                    <li><a title="enlace a categoria accesorios y complementos (work in progress)" href="#">ACCESORIOS Y
+                            COMPLEMENTOS</a></li>
                 </ul>
             </div>
         </div>
@@ -98,7 +97,8 @@
                 <li><a title="enlace a categoria raquetas (work in progress)" href="#">RAQUETAS</a></li>
                 <li><a title="enlace a categoria bolsas (work in progress)" href="#">BOLSAS</a></li>
                 <li><a title="enlace a categoria calzados (work in progress)" href="#">CALZADO</a></li>
-                <li><a title="enlace a categoria accesorios y complementos (work in progress)" href="#">ACCESORIOS Y COMPLEMENTOS</a></li>
+                <li><a title="enlace a categoria accesorios y complementos (work in progress)" href="#">ACCESORIOS Y
+                        COMPLEMENTOS</a></li>
             </ul>
         </div>
         <div class="ofertas">
@@ -171,7 +171,8 @@
             </div>
         </section>
         <div class="orange_100_btn">
-            <a title="enlace a vende tu producto (work in progress)" href="#" class="link_button orange_btn">¡Vende tu producto!</a>
+            <a title="enlace a vende tu producto (work in progress)" href="#" class="link_button orange_btn">¡Vende tu
+                producto!</a>
         </div>
     </main>
     <footer>
