--- a/HTML/club.html
+++ b/HTML/club.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Club</title>
+    <title>El club - EivissaPadel</title>
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="icon" type="image/x-icon" href="../public/assets/icons/favicon.svg">
 </head>
