--- a/HTML/club.html
+++ b/HTML/club.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!-- Header común, con la diferencia de tener una portada personalizada en móvil y desktop -->
     <header>
         <div class="banner_verde">
             <a title="enlace a home" href="index.html">
@@ -64,7 +65,9 @@
             </nav>
         </div>
     </header>
+
     <main id="club">
+        <!-- Sección de texto sencilla con dos fotos por texto -->
         <section id="asociacion">
             <h2>La asociación</h2>
             <div class="dos_fotos_texto">
@@ -105,6 +108,7 @@
             </div>
         </section>
         <a title="enlace a socios" href="socios.html" class="blue_btn link_button">¡Quiero ser Socio!</a>
+        <!-- Sección con 5 fotos que escalan en desktop limitándose al ancho de 1200  -->
         <section class="organizacion">
             <h2>¿Como estamos organizados?</h2>
             <div class="cinco_fotos">
@@ -135,6 +139,7 @@
                 número siga creciendo conforme crece el club!
             </p>
         </section>
+        <!-- Sección con un título con fondo propio -->
         <section id="compromiso_medioambiental">
             <div class="titulo_compromiso">
                 <h2>Compromiso Medioambiental</h2>
@@ -173,22 +178,24 @@
                 deseosos de aumentar nuestras actividades ¿nos ayudarás?
             </p>
         </section>
+        <!-- Botón de link a la página de socios -->
         <a title="enlace a socios" href="socios.html" class="orange_btn link_button">¡Quiero ser Socio!</a>
     </main>
+    <!-- footer común -->
     <footer>
         <div class="footer_container">
             <div id="links">
-                <a title="enlace a Youtube (work in progress)" href="#"> <img src="../public/assets/icons/YouTube.png"
-                        alt="logotipo de Youtube">
+                <a title="enlace a Youtube (work in progress)" href="#">
+                    <img src="../public/assets/icons/YouTube.png" alt="logotipo de Youtube">
                 </a>
-                <a title="enlace a Instagram (work in progress)" href="#"> <img
-                        src="../public/assets/icons/Instagram.png" alt="logotipo de Instagram">
+                <a title="enlace a Instagram (work in progress)" href="#">
+                    <img src="../public/assets/icons/Instagram.png" alt="logotipo de Instagram">
                 </a>
-                <a title="enlace a TwitterX (work in progress)" href="#"> <img src="../public/assets/icons/TwitterX.png"
-                        alt="logotipo de TwitterX">
+                <a title="enlace a TwitterX (work in progress)" href="#">
+                    <img src="../public/assets/icons/TwitterX.png" alt="logotipo de TwitterX">
                 </a>
-                <a title="enlace a Facebook (work in progress)" href="#"> <img src="../public/assets/icons/Facebook.png"
-                        alt="logotipo de Facebook">
+                <a title="enlace a Facebook (work in progress)" href="#">
+                    <img src="../public/assets/icons/Facebook.png" alt="logotipo de Facebook">
                 </a>
             </div>
             <div class="footer_desktop">
