skit to conitent incluido

--- a/HTML/club.html
+++ b/HTML/club.html
@@ -12,6 +12,7 @@
 <body>
     <!-- Header común, con la diferencia de tener una portada personalizada en móvil y desktop -->
     <header>
+        <a class="skip-link" title="Salta al contenido principal" href='#club'>Salta al contenido</a>
         <div class="banner_verde">
             <a title="enlace a home" href="index.html">
                 <img class="header_img" src="../public/assets/imgs/logotipo_negro.svg" alt="logotipo de EivissaPadel">
