--- a/HTML/socios.html
+++ b/HTML/socios.html
@@ -12,6 +12,7 @@
 <body>
     <!-- El header igual que en tienda, sin mensaje de bienvenida en la vista móvil -->
     <header>
+        <a class="skip-link" title="Salta al contenido principal" href='#socios'>Salta al contenido</a>
         <div class="banner_verde">
             <a title="enlace a home" href="index.html">
                 <img class="header_img" src="../public/assets/imgs/logotipo_negro.svg" alt="logotipo de EivissaPadel">
