--- a/HTML/tienda.html
+++ b/HTML/tienda.html
@@ -12,6 +12,7 @@
 <body>
     <!-- El header es igual que el de índex salvo por no presentar el mensaje de bienvenida con la foto de fondo -->
     <header>
+        <a class="skip-link" title="Salta al contenido principal" href='#tienda'>Salta al contenido</a>
         <div class="banner_verde">
             <a title="enlace a home" href="index.html">
                 <img class="header_img" src="../public/assets/imgs/logotipo_negro.svg" alt="logotipo de EivissaPadel">
