--- a/HTML/club.html
+++ b/HTML/club.html
@@ -66,7 +66,6 @@
             </nav>
         </div>
     </header>
-
     <main id="club">
         <!-- Sección de texto sencilla con dos fotos por texto -->
         <section id="asociacion">
@@ -204,7 +203,7 @@
                     <p>Política legal</p>
                 </div>
                 <div>
-                    <p>971396338 - EivissaPadel SL</p>
+                    <p>971396338 - EivissaPadel <abbr title="Sociedad Limitada">SL</abbr></p>
                     <p>Todos los derechos reservado ©️</p>
                 </div>
             </div>
