--- a/HTML/index.html
+++ b/HTML/index.html
@@ -277,7 +277,7 @@
                 </a>
             </div>
         </section>
-        <!-- Esta sección solo es el botón que redireccionaria a la página de contacto -->
+        <!-- Esta sección (no etiquetada como tal pues no tiene heading) solo es el botón que redireccionaria a la página de contacto -->
         <div class="orange_100_btn">
             <a title="enlace a contactanos (work in progress)" href="#" class="link_button orange_btn">Contáctanos</a>
         </div>
@@ -304,7 +304,7 @@
                     <p>Política legal</p>
                 </div>
                 <div>
-                    <p>971396338 - EivissaPadel SL</p>
+                    <p>971396338 - EivissaPadel <abbr title="Sociedad Limitada">SL</abbr></p>
                     <p>Todos los derechos reservado ©️</p>
                 </div>
             </div>
