--- a/HTML/tienda.html
+++ b/HTML/tienda.html
@@ -205,7 +205,7 @@
                     <p>Política legal</p>
                 </div>
                 <div>
-                    <p>971396338 - EivissaPadel SL</p>
+                    <p>971396338 - EivissaPadel <abbr title="Sociedad Limitada">SL</abbr></p>
                     <p>Todos los derechos reservado ©️</p>
                 </div>
             </div>
